// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`%{nickname} %{action} issue %{code} 1`] = `
{
  "body": {
    "end": 35,
    "items": [
      {
        "end": 11,
        "key": "nickname",
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "modulo": true,
        "start": 1,
        "type": 4,
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": " ",
      },
      {
        "end": 21,
        "key": "action",
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "modulo": true,
        "start": 13,
        "type": 4,
      },
      {
        "end": 28,
        "loc": {
          "end": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
          "start": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
        },
        "start": 21,
        "type": 3,
        "value": " issue ",
      },
      {
        "end": 35,
        "key": "code",
        "loc": {
          "end": {
            "column": 36,
            "line": 1,
            "offset": 35,
          },
          "start": {
            "column": 30,
            "line": 1,
            "offset": 29,
          },
        },
        "modulo": true,
        "start": 29,
        "type": 4,
      },
    ],
    "loc": {
      "end": {
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 35,
  "loc": {
    "end": {
      "column": 36,
      "line": 1,
      "offset": 35,
    },
    "source": "%{nickname} %{action} issue %{code}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi % {name}! 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi % ",
      },
      {
        "end": 11,
        "key": "name",
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "start": 5,
        "type": 4,
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": "!",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi % {name}!",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %% name ! 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi %% name !",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi %% name !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %@:name ! 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi %",
      },
      {
        "end": 10,
        "key": {
          "end": 10,
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "start": 6,
          "type": 7,
          "value": "name",
        },
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 6,
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi %@:name !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %{name}! 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 10,
        "key": "name",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "modulo": true,
        "start": 4,
        "type": 4,
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": "!",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi %{name}!",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %d %s ! 1`] = `
{
  "body": {
    "end": 10,
    "items": [
      {
        "end": 10,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi %d %s !",
      },
    ],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 10,
  "loc": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "source": "hi %d %s !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`no apples %| one apple % |  too much apples   1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [
          {
            "end": 11,
            "loc": {
              "end": {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "start": 0,
            "type": 3,
            "value": "no apples %",
          },
        ],
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 13,
        "items": [
          {
            "end": 24,
            "loc": {
              "end": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
            },
            "start": 13,
            "type": 3,
            "value": "one apple %",
          },
        ],
        "loc": {
          "end": {
            "column": 25,
            "line": 1,
            "offset": 24,
          },
          "start": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "start": 13,
        "type": 2,
      },
      {
        "end": 45,
        "items": [
          {
            "end": 45,
            "loc": {
              "end": {
                "column": 46,
                "line": 1,
                "offset": 45,
              },
              "start": {
                "column": 29,
                "line": 1,
                "offset": 28,
              },
            },
            "start": 28,
            "type": 3,
            "value": "too much apples  ",
          },
        ],
        "loc": {
          "end": {
            "column": 46,
            "line": 1,
            "offset": 45,
          },
          "start": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "start": 28,
        "type": 2,
      },
    ],
    "end": 45,
    "loc": {
      "end": {
        "column": 46,
        "line": 1,
        "offset": 45,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 45,
  "loc": {
    "end": {
      "column": 46,
      "line": 1,
      "offset": 45,
    },
    "source": "no apples %| one apple % |  too much apples  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
